logs/swin_multiscale_ranking_alpha0.3_20251215_220158.log
Traceback (most recent call last):
  File "/root/Perceptual-IQA-CS3324/train_swin.py", line 7, in <module>
    from HyperIQASolver_swin import HyperIQASolver
  File "/root/Perceptual-IQA-CS3324/HyperIQASolver_swin.py", line 5, in <module>
    import data_loader
  File "/root/Perceptual-IQA-CS3324/data_loader.py", line 3, in <module>
    import folders
  File "/root/Perceptual-IQA-CS3324/folders.py", line 324
    return sample, target
    ^^^^^^
SyntaxError: expected 'except' or 'finally' block
